name:                whobot
version:             0.1.0.0
synopsis:            who is in the office?
-- description:         
license:             PublicDomain
author:              Vladimir Kirillov
maintainer:          proger@hackndev.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable whobot
  main-is:             whobot.hs
  other-modules:       Ping, LeaseParse
  build-depends:       base ==4.5.*
                        , text
                        , containers
                        , ghc-prim
                        , bytestring
                        , aeson >=0.6.1.0
                        , process
                        , process-extras
                        , yaml
                        , regex-compat
                        , lens
